--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "private": true,
-  "devDependencies": {},
+  "main": "es6-init.js",
+  "scripts": {
+    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "electron-prebuilt-compile": "^1.8.2"
+  },
   "dependencies": {
-    "firebase-admin": "^5.8.1",
     "electron": "1.8.2",
+    "electron-compile": "^6.4.2",
     "express": "^4.16.2",
     "express-ipfilter": "0.3.1",
     "firebase-admin": "^5.8.1",
@@ -11,6 +20,10 @@
     "moment": "latest",
     "requirejs": "^2.3.5",
     "socket.io": "^2.0.4",
-    "xmlhttprequest": "^1.8.0"
+    "vue": "~2.5.0",
+    "xmlhttprequest": "^1.8.0",
+    "webpack-mix": "~1.1.0",
+    "laravel-mix": "~2.0.0",
+    "weather-icons": "~1.3.2"
   }
 }
