--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "socket.io": "^2.0.4",
     "vue": "~2.5.0",
     "xmlhttprequest": "^1.8.0",
-    "webpack-mix": "~1.1.0",
     "laravel-mix": "~2.0.0",
-    "weather-icons": "~1.3.2"
+    "weather-icons": "~1.3.2",
+    "axios": "^0.18.0"
   }
 }
