--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "electron-prebuilt-compile": "^1.8.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "electron": "1.8.2",
     "electron-compile": "^6.4.2",
     "express": "^4.16.2",
     "express-ipfilter": "0.3.1",
     "firebase-admin": "^5.8.1",
     "helmet": "^3.9.0",
+    "laravel-mix": "~2.0.0",
     "moment": "latest",
     "requirejs": "^2.3.5",
     "socket.io": "^2.0.4",
     "vue": "~2.5.0",
-    "xmlhttprequest": "^1.8.0",
-    "laravel-mix": "~2.0.0",
     "weather-icons": "~1.3.2",
-    "axios": "^0.18.0"
+    "xmlhttprequest": "^1.8.0"
   }
 }
