--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "express-ipfilter": "0.3.1",
     "firebase-admin": "^5.8.1",
     "helmet": "^3.9.0",
-    "laravel-mix": "~2.0.0",
+    "laravel-mix": "^1.4.5",
     "moment": "latest",
     "requirejs": "^2.3.5",
-    "socket.io": "^2.0.4",
     "vue": "~2.5.0",
     "weather-icons": "~1.3.2",
     "xmlhttprequest": "^1.8.0"
