--- a/package.json
+++ b/package.json
@@ -13,21 +13,22 @@
     "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "electron-prebuilt-compile": "^1.8.2"
+    "electron-prebuilt-compile": "~1.8.2"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "electron": "1.8.2",
-    "electron-compile": "^6.4.2",
-    "express": "^4.16.2",
-    "express-ipfilter": "0.3.1",
-    "firebase-admin": "^5.8.1",
-    "helmet": "^3.9.0",
-    "laravel-mix": "^1.4.5",
-    "moment": "latest",
-    "requirejs": "^2.3.5",
+    "axios": "~0.18.0",
+    "electron": "~1.8.2",
+    "electron-compile": "~6.4.2",
+    "express": "~4.16.2",
+    "express-ipfilter": "~0.3.1",
+    "firebase-admin": "~5.8.1",
+    "helmet": "~3.9.0",
+    "laravel-mix": "~1.4.5",
+    "moment": "~2.21.0",
+    "noble": "~1.9.1",
+    "requirejs": "~2.3.0",
     "vue": "~2.5.0",
     "weather-icons": "~1.3.2",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "~1.8.0"
   }
 }
