--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "electron-prebuilt-compile": "~1.8.2"
+    "jshint": "latest",
+    "mocha": "~1.8.2",
+    "should": "~1.2.2",
+    "sinon": "~1.6.0",
+    "async": "~0.2.9",
+    "ws": "~0.4.31"
   },
   "dependencies": {
     "axios": "~0.18.0",
@@ -30,5 +35,10 @@
     "vue": "~2.5.0",
     "weather-icons": "~1.3.2",
     "xmlhttprequest": "~1.8.0"
+  },
+  "optionalDependencies": {
+    "bluetooth-hci-socket": "^0.5.1",
+    "bplist-parser": "0.0.6",
+    "xpc-connection": "~0.1.4"
   }
 }
