Added bootstrap 4 and started removing unused styles

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/dist/app.js": "/dist/app.js",
-    "/dist/app.css": "/dist/app.css"
+    "/dist/app.css": "/dist/app.css",
+    "/dist/bootstrap.js": "/dist/bootstrap.js"
 }
