--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
   },
   "dependencies": {
     "axios": "~0.18.0",
+    "bootstrap": "~4.1.1",
     "electron": "~1.8.4",
     "electron-compile": "~6.4.2",
     "express": "~4.16.2",
     "express-ipfilter": "~0.3.1",
     "firebase-admin": "~5.8.1",
     "helmet": "~3.9.0",
+    "jquery": "~3.3.1",
     "laravel-mix": "~1.4.5",
     "moment": "~2.21.0",
     "noble": "~1.9.1",
+    "popper.js": "~1.14.0",
     "requirejs": "~2.3.0",
     "vue": "~2.5.0",
     "weather-icons": "~1.3.2",
